--- a/setup.cfg
+++ b/setup.cfg
@@ -17,8 +17,6 @@ packages = find:
 package_dir =
     = src
 install_requires =
+    langchain
     langchain-google-genai
     langchain-openai
-    pickle5
-
-python_requires = >=3.6
