--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,12 @@ services:
     image: genai-starter
     volumes:
       - ./data:/app/data
-    command: python -m genai_start.202_read_text_embedding_service
+    command: ["python", "src/genai_start/202_read_text_embedding_service.py"]
+  read_document:
+    build: .
+    image: genai-starter
+    volumes:
+      - ./data:/app/data
+    command: ["python", "src/genai_start/302_read_document_embedding_service.py"]
+
+  # Add more services for each file in genai_start
